[package]
name = "browser39-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.39.0"
scraper = "0.26"
ego-tree = "0.11"
url = "2"

[profile.release]
opt-level = "s"
strip = true

[package.metadata.component]
package = "browser39:tools"

[package.metadata.component.target]
world = "browser39"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit/deps/io" }
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
